syntax = "proto3";

package counter;

option go_package = "/gen/grpc";

service Counter {
  rpc Increment (IncrementByReq) returns (TotalRes) {}
  rpc GetTotal (GetTotalReq) returns (TotalRes) {}
}

message GetTotalReq{}

message IncrementByReq{
  int32 quantity = 1;
}

message TotalRes{
  int32 total = 1;
}
